WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314823
REGRESSION(
310826@main
): Vietnamese & Korean keyboard gets out of modeless input method in Mail Compose
https://bugs.webkit.org/show_bug.cgi?id=314823
Summary
REGRESSION(310826@main): Vietnamese & Korean keyboard gets out of modeless in...
Ryosuke Niwa
Reported
2026-05-14 09:05:29 PDT
Some Vietnamese and Korean input methods are modeless (i.e. not explicit confirmation of candidates). We somehow broke that in
310826@main
for Mail. <
rdar://176847897
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-05-14 11:47:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64942
EWS
Comment 2
2026-05-14 18:12:20 PDT
Committed
313286@main
(4951276cc765): <
https://commits.webkit.org/313286@main
> Reviewed commits have been landed. Closing PR #64942 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug