Source/WebKit/WebProcess/WebPage/mac/WebPageMac.mm
@@ -294,6 +294,15 @@ bool WebPage::executeKeypressCommandsInternal(const Vector<WebCore::KeypressComm
                 if (!editor->canEdit())
                     continue;
 
+                // Modeless input methods (Vietnamese Simple Telex, Korean Hangul) call insertText:
+                // with a replacementRange to commit a previously-inserted character into a longer
+                // sequence (e.g. replace 'v' with 'vi'). Set the selection to the replacement range
+                // first so editor->insertText replaces it, mirroring insertTextAsync.
+                if (currentCommand.replacementRange.location != WTF::notFound) {
+                    if (auto replacementSimpleRange = EditingRange::toRange(*frame, EditingRange { currentCommand.replacementRange }))
+                        protect(frame->selection())->setSelection(VisibleSelection(*replacementSimpleRange));
+                }
+
                 // An insertText: might be handled by other responders in the chain if we don't handle it.
                 // One example is space bar that results in scrolling down the page.
                 eventWasHandled |= editor->insertText(currentCommand.text, event);
